Refactoring. RAII. Dependency injection. Renaming.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,10 +11,18 @@ find_package(GameNetworkingSockets CONFIG REQUIRED)
 
 # Our program only has one cpp file
 add_executable(example_chat
-    example_chat.cpp
-    local_utils.cpp
-    non_blocking_console_user_input.cpp
+    src/app_options.cpp
+    src/chat_client.cpp
+    src/chat_server.cpp
+    src/local_utils.cpp
+    src/main.cpp
+    src/non_blocking_console_user_input.cpp
+    src/steam_networking_init_RAII.cpp
 )
 
 # This example links GameNetworkingSockets as a shared lib.
 target_link_libraries(example_chat GameNetworkingSockets::shared)
+
+target_include_directories(example_chat PRIVATE
+    src
+)
