--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,9 +10,19 @@ project(example_chat_vcpkg)
 find_package(GameNetworkingSockets CONFIG REQUIRED)
 
 # Our program only has one cpp file
-add_executable(
-    example_chat
-    example_chat.cpp)
+add_executable(example_chat
+    src/app_options.cpp
+    src/chat_client.cpp
+    src/chat_server.cpp
+    src/local_utils.cpp
+    src/main.cpp
+    src/non_blocking_console_user_input.cpp
+    src/steam_networking_init_RAII.cpp
+)
 
 # This example links GameNetworkingSockets as a shared lib.
 target_link_libraries(example_chat GameNetworkingSockets::shared)
+
+target_include_directories(example_chat PRIVATE
+    src
+)
