--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,50 +1,54 @@
 {
   "version": "2.0.0",
   "tasks": [
+
+    // remove build, vcpkg and vcpkg_install folders
     {
-      "label": "(Windows) 0. Clean console",
+      "label": "(Windows) 00. Remove build, vcpkg and vcpkg_installed folders",
+      "type": "shell",
+      "command": "rmdir /s /q build vcpkg vcpkg_installed",
+    },
+    {
+      "label": "(Windows) 03. Install vcpkg",
+      "type": "shell",
+      "command": "git clone https://github.com/microsoft/vcpkg && .\\vcpkg\\bootstrap-vcpkg.bat && .\\vcpkg\\vcpkg install --triplet=x64-windows"
+    },
+    {
+      "label": "(Windows) 05. Clean console",
       "type": "shell",
       "command": "cls",
     },
     {
-      "label": "(Windows) 0. Make build directory",
+      "label": "(Windows) 10. Configure",
       "type": "shell",
-      "command": "mkdir ${workspaceFolder}\\build 2>nul || (exit 0)",
+      "command": "cmake -S . -B build -G \"Ninja\" -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_TOOLCHAIN_FILE=vcpkg/scripts/buildsystems/vcpkg.cmake -DCMAKE_EXPORT_COMPILE_COMMANDS=ON",
       "dependsOn": [
-        "(Windows) 0. Clean console"
+        "(Windows) 05. Clean console"
       ]
     },
     {
-      "label": "(Windows) 1. Configure",
+      "label": "(Windows) 20. Build",
       "type": "shell",
-      "command": "cmake -G \"Ninja\" -DCMAKE_CXX_COMPILER=clang++ -B ${workspaceFolder}\\build -S ${workspaceFolder} -DCMAKE_TOOLCHAIN_FILE=vcpkg/scripts/buildsystems/vcpkg.cmake -DCMAKE_EXPORT_COMPILE_COMMANDS=ON",
+      "command": "cmake --build build -- -k 0", // stop on first error
+      // "command": "cmake --build build", // continue on error
       "dependsOn": [
-        "(Windows) 0. Make build directory"
+        "(Windows) 10. Configure"
       ]
     },
     {
-      "label": "(Windows) 2. Build",
+      "label": "(Windows) 60. Run Server",
       "type": "shell",
-      "command": "cmake --build ${workspaceFolder}/build -- -k 0", // stop on first error
-      // "command": "cmake --build ${workspaceFolder}/build", // continue on error
+      "command": "start build/example_chat.exe server",
       "dependsOn": [
-        "(Windows) 1. Configure"
+        // "(Windows) 20. Build"
       ]
     },
     {
-      "label": "(Windows) 6. Run Server",
+      "label": "(Windows) 70. Run Client",
       "type": "shell",
-      "command": "start ${workspaceFolder}/build/example_chat.exe server",
+      "command": "start build/example_chat.exe client 127.0.0.1",
       "dependsOn": [
-        // "(Windows) 2. Build"
-      ]
-    },
-    {
-      "label": "(Windows) 7. Run Client",
-      "type": "shell",
-      "command": "start ${workspaceFolder}/build/example_chat.exe client 127.0.0.1",
-      "dependsOn": [
-        // "(Windows) 2. Build"
+        // "(Windows) 20. Build"
       ]
     }
   ]
